kubernetes-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
      - name: portfolio-backend
        image: portfoliovijay.azurecr.io/portfolio-backend:build-143
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: backend-storage
          mountPath: /app/media
                  
        - name: backend-storage
          mountPath: /app/db.sqlite3
          subPath: db.sqlite3     
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-storage

      imagePullSecrets:
      - name: acr-secret
