kubernetes-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
  namespace: portfolio
spec:
  type: NodePort
  selector:
    app: portfolio-backend
  ports:
  - port: 8000
    targetPort: 8000
