kubernetes-manifests/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:

          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-backend
                port:
                  number: 8000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-frontend
                port:
                  number: 80
